
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int temp ;


 int BUFSIZE ;
 int atol (char*) ;
 int exit (int ) ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 scalar_t__ recv (int,char*,int,int ) ;

void readsocket(int sock, int response) {
 char temp[BUFSIZE];
 memset(temp,0,sizeof(temp));
 if (recv(sock,temp,sizeof(temp),0) <= 0) {
  printf("Error reading from socket\n");
  exit(0);
 }
 if (response != atol(temp)) {
  printf("Bad response: %s\n",temp);
  exit(0);
 }
}
